manifests/yolo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-backend
  namespace: yolo-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo-backend
  template:
    metadata:
      labels:
        app: yolo-backend
    spec:
      containers:
        - name: yolo-backend
          image: gcr.io/yolo-devops/missnayomie/brian-yolo-backend:v1.0.0
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"   # Requesting 256 MiB of memory
              cpu: "500m"       # Requesting 500 millicores of CPU
            limits:
              memory: "512Mi"   # Limiting to 512 MiB of memory
              cpu: "1000m"      # Limiting to 1 core of CPU
---
apiVersion: v1
kind: Service
metadata:
  name: yolo-backend
  namespace: yolo-devops
spec:
  selector:
    app: yolo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
