manifests/yolo-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-frontend
  namespace: yolo-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo-frontend
  template:
    metadata:
      labels:
        app: yolo-frontend
    spec:
      containers:
        - name: yolo-frontend
          image: gcr.io/yolo-devops/missnayomie/brian-yolo-client:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"  # Requesting 128 MiB of memory
              cpu: "250m"      # Requesting 250 millicores (1/4 core) of CPU
            limits:
              memory: "256Mi"  # Limiting to 256 MiB of memory
              cpu: "500m"      # Limiting to 500 millicores (1/2 core) of CPU

---
apiVersion: v1
kind: Service
metadata:
  name: yolo-frontend
  namespace: yolo-devops
spec:
  selector:
    app: yolo-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
