manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: yolo-devops
  # Set up CORS annotations here
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  podSelector:
    matchLabels:
      app: yolo-frontend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: yolo-backend
  - from:
    - podSelector:
        matchLabels:
          app: mongodb-statefulset
